Menu Items into a table

--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -13,13 +13,8 @@
 <body>
 <div class="container">
     <h1>Dinner planner</h1>
-    <div id="exampleView">
+    <div id="dinnerDishes">
         <div>
-            Dishes: <span id="dinnerModel"></span>
-        </div>
-        <div>
-            <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
-            <button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
         </div>
     </div>
 </div>
