--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -14,14 +14,17 @@
 	<div class="container">
 		<div id="viewStartPage">
 			<div>
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Homelette <small>From the best chefs in the world directly into your kitchen</small></h1>
+				<div class="row" id="topOfPage">
+					<div class="col-md-3">
+						<h1>Homelette</h1>
+					</div>
+					<div class="col-md-9" id="bottomAlignedText">
+        				<h2>From the best chefs in the world directly into your kitchen</h2>	
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-9">
-						<img src="images/familydinner.jpg" width="1000" height="600">
+						
 
 						</div>
 					</div>
@@ -41,6 +44,6 @@
 	<script src="js/view/exampleView.js"></script>
 	<script src="js/view/viewStartPage.js"></script>
 	<script src="js/view/exampleViewController.js"></script>
-
+	<link rel="stylesheet" type="text/css" href="styles.css">
   </body>
 </html>
