all elements have ids

--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -12,15 +12,15 @@
 
 </head>
 <body>
-<header>Dinner planner</header>
-<aside>
+<header id="headerViewAllDishes">Dinner planner</header>
+<aside id="asideViewAllDishes">
     my dinner, people etc
 </aside>
 <section id = "selectDish">
     <div>
         <h4>SELECT DISH</h2>
     </div>
-    <hr />
+    <hr id="hrViewAllDishes"/>
     <form class="form-inline">
         <div class="form-group">
             <input type="text" class="form-control" placeholder="Enter key words">
@@ -28,8 +28,6 @@
         </div>
         <div class="form-group">
             <select class="form-control" id="chooseFood">
-                <!-- <option value="one">One</option>
-                <option value="two">Two</option>-->
             </select> 
         </div>
     </form>    
