trying to fix "search", but doesn't work

--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -23,11 +23,11 @@
     <hr id="hrViewAllDishes"/>
     <form class="form-inline">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Enter key words">
-            <button type="submit" class="btn btn-primary">search</button>
+            <input type="text" class="form-control" id="chooseIngridient" value="" placeholder="Enter key words">
+            <button type="submit" class="btn btn-primary" id="searchButton" value="submit">search</button>
         </div>
         <div class="form-group">
-            <select class="form-control" id="chooseFood">
+            <select class="form-control" id="chooseFood" value="">
             </select> 
         </div>
     </form>    
