Added page description
Should be a box further down, but not working yet

--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -22,12 +22,11 @@
         				<h2>From the best chefs in the world directly into your kitchen</h2>	
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-9">
-						
-
-						</div>
+				<div class="row" id="pageDescription">
+					<div class="col-md-9" >
+						<h2>From the best chefs in the world directly into your kitchen</h2>	
 					</div>
+
 				</div>
 			</div>
 		</div>
