Changed css from only "body" to id

--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 
   </head>
-  <body>
+  <body id="startPageBody">
 	<div class="container">
 		<div id="viewStartPage">
 			<div>
