Layout for start page finished

--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner</title>
+    <title>Homelette</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -14,19 +14,25 @@
 	<div class="container">
 		<div id="viewStartPage">
 			<div>
-				<div class="row" id="topOfPage">
+				<div class="row" id="pageHeader">
 					<div class="col-md-3">
-						<h1>Homelette</h1>
+						<div id="pageTitle">
+							Homelette
+						</div>
 					</div>
 					<div class="col-md-9" id="bottomAlignedText">
-        				<h2>From the best chefs in the world directly into your kitchen</h2>	
+        				<div id="pageSubTitle">
+        					From the best chefs in the world directly into your kitchen
+        				</div>	
 					</div>
 				</div>
-				<div class="row" id="pageDescription">
-					<div class="col-md-9" >
-						<h2>From the best chefs in the world directly into your kitchen</h2>	
+				<div class="row">
+					<div class="col-md-5" id="startPageDescription">
+						<h2>A Home Dinner Service</h2>	
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p>Start quickly</p>
+						<button id="createDinnerButton" class="btn">Create Dinner</span></button>
 					</div>
-
 				</div>
 			</div>
 		</div>
