The first header is now different than the others

--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div id="viewStartPage">
 			<div>
-				<div class="row" id="pageHeader">
+				<div class="row" id="startPageHeader">
 					<div class="col-md-3">
 						<div id="pageTitle">
 							Homelette
