--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -13,32 +13,45 @@
 </head>
 <body>
 <header id="headerViewAllDishes">Dinner planner</header>
-<aside id="asideViewAllDishes">
-    my dinner, people etc
-</aside>
-<section id = "selectDish">
-    <div>
-        <h4>SELECT DISH</h2>
-    </div>
-    <hr id="hrViewAllDishes"/>
-    <form class="form-inline">
-        <div class="form-group">
-            <input type="text" class="form-control" id="chooseIngridient" value="" placeholder="Enter key words">
-            <button type="submit" class="btn btn-primary" id="searchButton" value="submit">search</button>
+<section id = "allThings">
+    <div class="row">
+        <div class="col-md-3">
+            <aside id="asideViewAllDishes">
+                my dinner, people etc
+            </aside>
         </div>
-        <div class="form-group">
-            <select class="form-control" id="chooseFood" value="">
-            </select> 
+        <div class="col-md-9" id="twoSections">
+            <section id = "selectDish">
+                <div>
+                    <h4>SELECT DISH</h2>
+                </div>
+                <hr id="hrViewAllDishes"/>
+                <form class="form-inline">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="chooseIngridient" value="" placeholder="Enter key words">
+                        <button type="submit" class="btn btn-primary" id="searchButton" value="submit">search</button>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control" id="chooseFood" value="">
+                        </select> 
+                    </div>
+                </form>    
+            </section>
+            <section id= "menuScroll">
+                <div class="col-md-2" id="colOne">   
+                </div>
+                <div class="col-md-2" id="colTwo">
+                </div>
+                <div class="col-md-2" id="colThree">
+                </div>
+                <div class="col-md-2" id="colFour">
+                </div>
+                <div class="col-md-2" id="colFive">
+                </div>
+            </section>
         </div>
-    </form>    
-</section>
-<section id= "menuScroll">
-<div class="container">
-    <div id="dinnerDishes">
     </div>
-</div>
 </section>
- 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
@@ -49,6 +62,6 @@
 <script src="js/model/dinnerModel.js"></script>
 <script src="js/view/exampleView.js"></script>
 <script src="js/view/viewAllDishes.js"></script>
-<script src="js/view/exampleViewController.js"></script>
+<!-- <script src="js/view/exampleViewController.js"></script> -->
 </body>
 </html>
