now viewAllDishes has the correct header

--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -9,10 +9,23 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styling.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
-<header id="headerViewAllDishes">Dinner planner</header>
+<!-- <header id="headerViewAllDishes">Dinner planner</header> -->
+<div class="row" id="startPageHeader">
+    <div class="col-md-3">
+        <div id="pageTitle">
+            Homelette
+        </div>
+    </div>
+    <div class="col-md-9" id="bottomAlignedText">
+        <div id="pageSubTitle">
+            From the best chefs in the world directly into your kitchen
+        </div>  
+</div>
+</div>
 <section id = "allThings">
     <div class="row">
         <div class="col-md-3">
