--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -30,7 +30,28 @@
     <div class="row">
         <div class="col-md-3">
             <aside id="asideViewAllDishes">
-                my dinner, people etc
+                <div>
+                    <h3 id="myDinner">My dinner</h3>
+                </div>
+                <div class="row" id="guest">
+                    <div class="col-md-6" id="guestDiv">Guests</div>
+                    <div class="col-md-3" id="guestPopulateDiv"><select class = "form-control" id="populateGuestOption" value></select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6" id="dishNameDiv">Dish Name</div>
+                    <div class="col-md-6" id="costDiv">Cost</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6" id="">Pending</div>
+                    <div class="col-md-6" id="">0.0</div>
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-6" id="totalSek">SEK 0.0</div>
+                </div>
+                <div id = "confirmDinnerButton">
+                    <button type="submit" class="btn btn-primary" id="confirmDinner" value="submit">Confirm Dinner</button>
+                </div>
             </aside>
         </div>
         <div class="col-md-9" id="twoSections">
@@ -50,6 +71,7 @@
                     </div>
                 </form>    
             </section>
+            <div id="separatorDiv"></div>
             <section id= "menuScroll">
                 <div class="col-md-2" id="colOne">   
                 </div>
