tried to fix some functions in dinnerModel.js

--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -35,7 +35,8 @@
                 </div>
                 <div class="row" id="guest">
                     <div class="col-md-6" id="guestDiv">Guests</div>
-                    <div class="col-md-3" id="guestPopulateDiv"><select class = "form-control" id="populateGuestOption" value></select>
+                    <div class="col-md-3" id="guestPopulateDiv">
+                        <select class = "form-control" id="populateGuestOption" value></select>
                     </div>
                 </div>
                 <div class="row">
