--- a/viewAllDishes.html
+++ b/viewAllDishes.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styling.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styling.css"> -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
