--- a/viewRecipeDetails.html
+++ b/viewRecipeDetails.html
@@ -4,118 +4,125 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homelette</title>
+    <title>Homelette - Recipe Details</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 
   </head>
-  <body>
+ <body>
 	<div class="container">
-		<div>
-			<div>
-				<div class="row" id="pageHeader">
-					<div class="col-md-3">
-						<div id="pageTitle">
-							Homelette
-						</div>
-					</div>
-					<div class="col-md-9" id="bottomAlignedText">
-        				<div id="pageSubTitle">
-        					From the best chefs in the world directly into your kitchen
-        				</div>	
-					</div>
+
+		<!-- HEADER -->
+		<section id="pageHeader">
+			<div class="row" id="pageHeader">
+				<div class="col-md-3">
+					<div id="pageTitle">Homelette</div>
 				</div>
-				<div class="row">
-					<div class="col-sm-2" id="pageLeft">
-						<div class="row">
-							<h3>My Dinner</h3>
-						</div>
-						<div class="row">
-							<div class="col-sm-6">
-							<p>People</p>
-							</div>
-							<div class="col-sm-6">
-								<select class="form-control">
-								    <option value=1>1</option>
-								    <option value=2>2</option>
-								    <option value=3>3</option>
-								    <option value=4>4</option>
-								    <option value=5>5</option>
-								</select>
-							</div>
-						</div>
-						<div class="row">
-							<table class="table">
-								<thead>
-							         <tr>
-							            <th>Dish Name</th>
-							            <th>Cost</th>
-							         </tr>
-							    </thead>
-						        <tbody>
-						          	<tr>
-						            	<td>Pending</td>
-						            	<td>77.20</td>
-						          	</tr>
-						     	</tbody>
-					    	</table>
-						</div>
-						<button class="btn">Confirm Dinner</span></button>
-					</div>
-
-					<div class="col-md-5" id="recipePreparation">
-						<div class="row">
-							<div class="col-md-12">
-								<h2>Lasagna</h2>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<img src="images/lasagna.jpg" class="img-responsive" alt="Responsive image">
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<button class="btn">Back to select dish</span></button>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<h3>Preparations</h3>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12">
-								<p>Lorem impsum...</p>
-							</div>
-						</div>
-
-
-					</div>
-
-					<div class="col-md-5" id="ingredientList">
-						<h3>Ingredients for 4 people</h3>
-						<table class="table">
-					        <tbody>
-					          	<tr>
-					            	<td>2tbs</td>
-					            	<td>olive oil</td>
-					            	<td>SEK</td>
-					            	<td>0.20</td>
-					          	</tr>
-					          	<tr>
-					            	<td>2tbs</td>
-					            	<td>olive oil</td>
-					            	<td>SEK</td>
-					            	<td>0.20</td>
-					         	</tr>
-					     	</tbody>
-					    </table>
-					</div>
-
+				<div class="col-md-9" id="bottomAlignedText">
+					<div id="pageSubTitle">
+						From the best chefs in the world directly into your kitchen
+					</div>	
 				</div>
 			</div>
+		</section>
+
+		
+		<div class="row">
+
+			<!-- Left side of page -->
+			<section>
+				<div class="col-sm-2" id="pageLeft">
+					<div class="row">
+						<h3>My Dinner</h3>
+					</div>
+					<div class="row" id="guest">
+	                    <div class="col-md-6" id="guestDiv">Guests</div>
+	                    <div class="col-md-6" id="guestPopulateDiv">
+	                        <select class = "form-control" id="populateGuestOption" value></select>
+	                    </div>
+	                </div>
+					<div class="row">
+						<table class="table">
+							<thead>
+						         <tr>
+						            <th>Dish Name</th>
+						            <th>Cost</th>
+						         </tr>
+						    </thead>
+					        <tbody>
+					          	<tr>
+					            	<td>Pending</td>
+					            	<td>77.20</td>
+					          	</tr>
+					     	</tbody>
+				    	</table>
+					</div>
+					<div class="row">
+						<div class="col-md-6">Total cost</div>
+						<div class="col-md-6" id="totalSek">0.00 SEK</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<button type="submit" class="btn" id="confirmDinner" value="submit">Confirm Dinner</button>
+						</div>
+					</div>			
+				</div>
+			</section>
+
+			<!-- Middle of page  -->
+			<section>
+				<div class="col-md-5" id="recipePreparation">
+					<div class="row">
+						<div class="col-md-12">
+							<h2>Lasagna</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<img src="images/lasagna.jpg" class="img-responsive" alt="Responsive image">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<button class="btn" id="backButton">Back to select dish</button>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<h3>Preparations</h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<p>Lorem impsum...</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Right side of page -->
+			<section>
+				<div class="col-md-5" id="ingredientList">
+					<h3>Ingredients for 4 people</h3>
+					<table class="table">
+				        <tbody>
+				          	<tr>
+				            	<td>2tbs</td>
+				            	<td>olive oil</td>
+				            	<td>SEK</td>
+				            	<td>0.20</td>
+				          	</tr>
+				          	<tr>
+				            	<td>2tbs</td>
+				            	<td>olive oil</td>
+				            	<td>SEK</td>
+				            	<td>0.20</td>
+				         	</tr>
+				     	</tbody>
+				    </table>
+				</div>
+			</section>
 		</div>
 	</div>
 
