--- a/viewStartPage.html
+++ b/viewStartPage.html
@@ -12,28 +12,22 @@
   </head>
   <body id="startPageBody">
 	<div class="container">
-		<div id="viewStartPage">
-			<div>
-				<div class="row" id="startPageHeader">
-					<div class="col-md-3">
-						<div id="pageTitle">
-							Homelette
-						</div>
-					</div>
-					<div class="col-md-9" id="bottomAlignedText">
-        				<div id="pageSubTitle">
-        					From the best chefs in the world directly into your kitchen
-        				</div>	
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-5" id="startPageDescription">
-						<h2>A Home Dinner Service</h2>	
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<p>Start quickly</p>
-						<button id="createDinnerButton" class="btn">Create Dinner</span></button>
-					</div>
-				</div>
+		<div class="row" id="startPageHeader">
+			<div class="col-md-3">
+				<div id="pageTitle">Homelette</div>
+			</div>
+			<div class="col-md-9" id="bottomAlignedText">
+				<div id="pageSubTitle">
+					From the best chefs in the world directly into your kitchen
+				</div>	
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-5" id="startPageDescription">
+				<h2>A Home Dinner Service</h2>	
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>Start quickly</p>
+				<button id="createDinnerButton" class="btn">Create Dinner</span></button>
 			</div>
 		</div>
 	</div>
