Changed layout to be more similar to mockup

--- a/viewRecipeDetails.html
+++ b/viewRecipeDetails.html
@@ -72,7 +72,7 @@
 
 			<!-- Middle of page  -->
 			<section>
-				<div class="col-md-5" id="recipePreparation">
+				<div class="col-md-6" id="recipePreparation">
 					<div class="row">
 						<div class="col-md-12">
 							<h2>Lasagna</h2>
@@ -103,24 +103,37 @@
 
 			<!-- Right side of page -->
 			<section>
-				<div class="col-md-5" id="ingredientList">
-					<h3>Ingredients for 4 people</h3>
-					<table class="table">
-				        <tbody>
-				          	<tr>
-				            	<td>2tbs</td>
-				            	<td>olive oil</td>
-				            	<td>SEK</td>
-				            	<td>0.20</td>
-				          	</tr>
-				          	<tr>
-				            	<td>2tbs</td>
-				            	<td>olive oil</td>
-				            	<td>SEK</td>
-				            	<td>0.20</td>
-				         	</tr>
-				     	</tbody>
-				    </table>
+				<div class="col-md-4" id="ingredientList">
+					<div class="col-md-12">
+						<h3>Ingredients for 4 people</h3>
+					</div>
+					<div class="col-md-12">
+						<table class="table" >
+					        <tbody id="igredientTable">
+					          	<tr >
+					            	<td>2tbs</td>
+					            	<td>olive oil</td>
+					            	<td>SEK</td>
+					            	<td>0.20</td>
+					          	</tr>
+					          	<tr>
+					            	<td>2tbs</td>
+					            	<td>olive oil</td>
+					            	<td>SEK</td>
+					            	<td>0.20</td>
+					         	</tr>
+					         	<tr> 
+					            	<td>2tbs</td>
+					            	<td>olive oil</td>
+					            	<td>SEK</td>
+					            	<td>0.20</td>
+					         	</tr>
+					     	</tbody>
+					    </table>
+					</div>
+					<div class="col-md-12">
+						<button class="btn" id="confirmDishButton">Confirm Dish</button>
+					</div>
 				</div>
 			</section>
 		</div>
