Added confirm dish button

--- a/viewRecipeDetails.html
+++ b/viewRecipeDetails.html
@@ -104,35 +104,47 @@
 			<!-- Right side of page -->
 			<section>
 				<div class="col-md-4" id="ingredientList">
-					<div class="col-md-12">
-						<h3>Ingredients for 4 people</h3>
+					<div class="row">
+						<div class="col-md-12">
+							<h3>Ingredients for 4 people</h3>
+						</div>
 					</div>
-					<div class="col-md-12">
-						<table class="table" >
-					        <tbody id="igredientTable">
-					          	<tr >
-					            	<td>2tbs</td>
-					            	<td>olive oil</td>
-					            	<td>SEK</td>
-					            	<td>0.20</td>
-					          	</tr>
-					          	<tr>
-					            	<td>2tbs</td>
-					            	<td>olive oil</td>
-					            	<td>SEK</td>
-					            	<td>0.20</td>
-					         	</tr>
-					         	<tr> 
-					            	<td>2tbs</td>
-					            	<td>olive oil</td>
-					            	<td>SEK</td>
-					            	<td>0.20</td>
-					         	</tr>
-					     	</tbody>
-					    </table>
+					<div class="row">
+						<div class="col-md-12">
+							<table class="table" >
+						        <tbody id="igredientTable">
+						          	<tr>
+						            	<td>2tbs</td>
+						            	<td>olive oil</td>
+						            	<td>SEK</td>
+						            	<td>0.20</td>
+						          	</tr>
+						          	<tr>
+						            	<td>2tbs</td>
+						            	<td>olive oil</td>
+						            	<td>SEK</td>
+						            	<td>0.20</td>
+						         	</tr>
+						         	<tr> 
+						            	<td>2tbs</td>
+						            	<td>olive oil</td>
+						            	<td>SEK</td>
+						            	<td>0.20</td>
+						         	</tr>
+						     	</tbody>
+						    </table>
+						</div>
 					</div>
-					<div class="col-md-12">
-						<button class="btn" id="confirmDishButton">Confirm Dish</button>
+					<div class="row">
+						<div class="col-md-6">
+							<button class="btn" id="confirmDishButton">Confirm Dish</button>
+						</div>
+						<div class="col-md-3">
+							<p> Total cost </p>
+						</div>
+						<div class="col-md-3" id="costDish">
+							<p> 0.00 SEK </p>
+						</div>
 					</div>
 				</div>
 			</section>
