--- a/viewRecipeDetails.html
+++ b/viewRecipeDetails.html
@@ -160,8 +160,8 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
-	<script src="js/view/viewStartPage.js"></script>
-	<script src="js/view/exampleViewController.js"></script>
+<!-- 	// <script src="js/view/viewStartPage.js"></script>
+	// <script src="js/view/exampleViewController.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </body>
 </html>
