--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -27,7 +27,10 @@
                 </div>
             </div>
         </section>
-        <div id = "startPage">
+
+        <div id = "bodyForAllPages">
+
+        <div id = "startPage" style = "">
             <div class="row" id= "startPageBody" >
                 <div class="col-md-5" id="startPageDescription">
                     <h2>A Home Dinner Service</h2>  
@@ -250,6 +253,8 @@
             </div>
         </div>
 
+    </div> <!--  bodyAllPagesClosed -->
+
     </div>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -259,7 +264,7 @@
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
     <script src="js/model/dinnerModel.js"></script>
-<!--     // <script src="js/view/exampleView.js"></script> -->
+    <script src="js/view/viewStartPage.js"></script>
     <script src="js/view/viewAllDishes.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
     <!-- <script src="js/view/exampleViewController.js"></script> -->
