--- a/viewRecipeDetails.html
+++ b/viewRecipeDetails.html
@@ -27,127 +27,128 @@
 			</div>
 		</section>
 
-		
-		<div class="row">
+		<div id = "viewRecipeDetails">	
+			<div class="row">
 
-			<!-- Left side of page -->
-			<section>
-				<div class="col-sm-2" id="pageLeft">
-					<div class="row">
-						<h3>My Dinner</h3>
-					</div>
-					<div class="row" id="guest">
-	                    <div class="col-md-6" id="guestDiv">Guests</div>
-	                    <div class="col-md-6" id="guestPopulateDiv">
-	                        <select class = "form-control" id="populateGuestOption" value></select>
-	                    </div>
-	                </div>
-					<div class="row">
-						<table class="table">
-							<thead>
-						         <tr>
-						            <th>Dish Name</th>
-						            <th>Cost</th>
-						         </tr>
-						    </thead>
-					        <tbody>
-					          	<tr>
-					            	<td>Pending</td>
-					            	<td>77.20</td>
-					          	</tr>
-					     	</tbody>
-				    	</table>
-					</div>
-					<div class="row">
-						<div class="col-md-6">Total cost</div>
-						<div class="col-md-6" id="totalSek">0.00 SEK</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<button type="submit" class="btn" id="confirmDinner" value="submit">Confirm Dinner</button>
+				<!-- Left side of page -->
+				<section>
+					<div class="col-sm-2" id="pageLeft">
+						<div class="row">
+							<h3>My Dinner</h3>
 						</div>
-					</div>			
-				</div>
-			</section>
-
-			<!-- Middle of page  -->
-			<section>
-				<div class="col-md-6" id="recipePreparation">
-					<div class="row">
-						<div class="col-md-12">
-							<h2>Lasagna</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<img src="images/lasagna.jpg" class="img-responsive" alt="Responsive image">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<button class="btn" id="backButton">Back to select dish</button>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<h3>Preparations</h3>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<p>Lorem impsum...</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Right side of page -->
-			<section>
-				<div class="col-md-4" id="ingredientList">
-					<div class="row">
-						<div class="col-md-12">
-							<h3>Ingredients for 4 people</h3>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<table class="table" >
-						        <tbody id="igredientTable">
+						<div class="row" id="guest">
+		                    <div class="col-md-6" id="guestDiv">Guests</div>
+		                    <div class="col-md-6" id="guestPopulateDiv">
+		                        <select class = "form-control" id="populateGuestOption" value></select>
+		                    </div>
+		                </div>
+						<div class="row">
+							<table class="table">
+								<thead>
+							         <tr>
+							            <th>Dish Name</th>
+							            <th>Cost</th>
+							         </tr>
+							    </thead>
+						        <tbody>
 						          	<tr>
-						            	<td>2tbs</td>
-						            	<td>olive oil</td>
-						            	<td>SEK</td>
-						            	<td>0.20</td>
+						            	<td>Pending</td>
+						            	<td>77.20</td>
 						          	</tr>
-						          	<tr>
-						            	<td>2tbs</td>
-						            	<td>olive oil</td>
-						            	<td>SEK</td>
-						            	<td>0.20</td>
-						         	</tr>
-						         	<tr> 
-						            	<td>2tbs</td>
-						            	<td>olive oil</td>
-						            	<td>SEK</td>
-						            	<td>0.20</td>
-						         	</tr>
 						     	</tbody>
-						    </table>
+					    	</table>
+						</div>
+						<div class="row">
+							<div class="col-md-6">Total cost</div>
+							<div class="col-md-6" id="totalSek">0.00 SEK</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<button type="submit" class="btn" id="confirmDinner" value="submit">Confirm Dinner</button>
+							</div>
+						</div>			
+					</div>
+				</section>
+
+				<!-- Middle of page  -->
+				<section>
+					<div class="col-md-6" id="recipePreparation">
+						<div class="row">
+							<div class="col-md-12">
+								<h2>Lasagna</h2>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<img src="images/lasagna.jpg" class="img-responsive" alt="Responsive image">
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<button class="btn" id="backButton">Back to select dish</button>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<h3>Preparations</h3>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<p>Lorem impsum...</p>
+							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-6">
-							<button class="btn" id="confirmDishButton">Confirm Dish</button>
+				</section>
+
+				<!-- Right side of page -->
+				<section>
+					<div class="col-md-4" id="ingredientList">
+						<div class="row">
+							<div class="col-md-12">
+								<h3>Ingredients for 4 people</h3>
+							</div>
 						</div>
-						<div class="col-md-3">
-							<p> Total cost </p>
+						<div class="row">
+							<div class="col-md-12">
+								<table class="table" >
+							        <tbody id="igredientTable">
+							          	<tr>
+							            	<td>2tbs</td>
+							            	<td>olive oil</td>
+							            	<td>SEK</td>
+							            	<td>0.20</td>
+							          	</tr>
+							          	<tr>
+							            	<td>2tbs</td>
+							            	<td>olive oil</td>
+							            	<td>SEK</td>
+							            	<td>0.20</td>
+							         	</tr>
+							         	<tr> 
+							            	<td>2tbs</td>
+							            	<td>olive oil</td>
+							            	<td>SEK</td>
+							            	<td>0.20</td>
+							         	</tr>
+							     	</tbody>
+							    </table>
+							</div>
 						</div>
-						<div class="col-md-3" id="costDish">
-							<p> 0.00 SEK </p>
+						<div class="row">
+							<div class="col-md-6">
+								<button class="btn" id="confirmDishButton">Confirm Dish</button>
+							</div>
+							<div class="col-md-3">
+								<p> Total cost </p>
+							</div>
+							<div class="col-md-3" id="costDish">
+								<p> 0.00 SEK </p>
+							</div>
 						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</div>
 	</div>
 
@@ -160,7 +161,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 	<script src="js/view/exampleView.js"></script>
-<!-- 	// <script src="js/view/viewStartPage.js"></script>
+	<script src="js/view/viewStartPage.js"></script>
 	// <script src="js/view/exampleViewController.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
   </body>
